[package]
name = "multisig_ecdsa"
version = "0.1.0"
edition = "2021"

[dependencies]
# Base dependencies
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.1", features = ["macros"] }
http = "1.2.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
futures = "0.3.31"

# OpenApi documentation
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "debug-embed"] }
utoipauto = "0.2.0"

# Serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138" 
serde_yaml = "0.9.34"

# Misc
http-body-util = "0.1.2"
anyhow = "1.0.95"
config = "0.15.8"
time = "0.3.37"
fake = "4.0.0"
uuid = { version = "1.13.2", features = ["v4"] }
thiserror = "2.0.11"

# Crypto
secp256k1 = { version = "0.30.0", features = [ "hashes" ] }
rand = "0.9.0"
secrecy = "0.10.3"
bip39 = "2.1.0"

# Metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "chrono",
  "registry",
  "env-filter",
] }

